--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>DevFolio Bootstrap Template</title>
+    <title>FindMe</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -74,8 +74,8 @@
         <div class="table-cell">
             <div class="container">
                 <!--<p class="display-6 color-d">Hello, world!</p>-->
-                <h1 class="intro-title mb-4">I am Morgan Freeman</h1>
-                <p class="intro-subtitle"><span class="text-slider-items">CEO DevFolio,Web Developer,Web Designer,Frontend Developer,Graphic Designer</span><strong class="text-slider"></strong></p>
+                <h1 class="intro-title mb-4">Lorem ipsum dolor </h1>
+                <p class="intro-subtitle"><span class="text-slider-items">Lorem ipsum dolor sit ,Amet consectetur adipisicing,Facilis dolorum dolorem soluta,Autem nemo esse,Ratione nobis mollitia </span><strong class="text-slider"></strong></p>
                 <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
             </div>
         </div>
