--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,71 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>FindMe</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
 
-    <!-- Favicons -->
-
-    <link href="{{asset("assets/img/favicon.png")}}" rel="icon">
-    <link href="{{asset("assets/img/apple-touch-icon.png")}}" rel="apple-touch-icon">
-
-    <!-- Bootstrap CSS File -->
-    <link href="  {{asset("assets/lib/bootstrap/css/bootstrap.min.css")}}" rel="stylesheet">
-    <!-- Libraries CSS Files -->
-    <link href="{{asset("assets/lib/font-awesome/css/font-awesome.min.css")}}" rel="stylesheet">
-    <link href="{{asset("assets/lib/animate/animate.min.css")}}">
-    <link href="{{asset("assets/lib/ionicons/css/ionicons.min.css")}}">
-    <link href="{{asset("assets/lib/owlcarousel/assets/owl.carousel.min.css")}}" rel="stylesheet">
-    <link href="{{asset("assets/lib/lightbox/css/lightbox.min.css")}}" rel="stylesheet">
-
-    <!-- Main Stylesheet File -->
-
-    <link href=" {{asset("assets/css/style.css")}}" rel="stylesheet">
-
-
-</head>
-
-<body id="page-top">
-
-<!--/ Nav Star /-->
-<nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
-    <div class="container">
-
-        <a class="navbar-brand js-scroll" href="#page-top">    <img src="{{asset("assets/img/favicon1.png")}}" ></a>
-        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
-                aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
-        <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link js-scroll active" href="#home">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll" href="#about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll" href="#service">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll" href="#work">Work</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll" href="#blog">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll" href="#contact">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<!--/ Nav End /-->
+{% include 'header.html.twig' %}
 
 <!--/ Intro Skew Star /-->
 <div id="home" class="intro route bg-image" style="background-image: url({{asset("assets/img/intro-bg.jpg")}})">
@@ -74,8 +8,8 @@
         <div class="table-cell">
             <div class="container">
                 <!--<p class="display-6 color-d">Hello, world!</p>-->
-                <h1 class="intro-title mb-4">Lorem ipsum dolor </h1>
-                <p class="intro-subtitle"><span class="text-slider-items">Lorem ipsum dolor sit ,Amet consectetur adipisicing,Facilis dolorum dolorem soluta,Autem nemo esse,Ratione nobis mollitia </span><strong class="text-slider"></strong></p>
+                <h1 class="intro-title mb-4">FIND ME ... </h1>
+                <p class="intro-subtitle"><span class="text-slider-items">Chercher une personne perdue  ,Aider à retrouver les perdus...,Je sais pas quoi...</span><strong class="text-slider"></strong></p>
                 <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
             </div>
         </div>
@@ -185,37 +119,6 @@
     </footer>
 </section>
 <!--/ Section Contact-footer End /-->
-
-<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-<div id="preloader"></div>
-
-<!-- JavaScript Libraries -->
-<script src="{{ asset("assets/lib/jquery/jquery.min.js") }}"></script>
-
-<script src="{{ asset("assets/lib/jquery/jquery-migrate.min.js") }}"></script>
-
-<script src="{{ asset("assets/lib/popper/popper.min.js") }}"></script>
-
-<script src="{{ asset("assets/lib/bootstrap/js/bootstrap.min.js") }}"></script>
-
-<script src="{{ asset("assets/lib/easing/easing.min.js") }}"></script>
-
-<script src="{{ asset("assets/lib/counterup/jquery.waypoints.min.js") }}"></script>
-
-<script src="{{ asset("assets/lib/counterup/jquery.counterup.js") }}"></script>
-
-<script src="{{ asset("assets/lib/owlcarousel/owl.carousel.min.js") }}"></script>
-
-<script src="{{ asset("assets/lib/lightbox/js/lightbox.min.js") }}"></script>
-
-<script src="{{ asset("assets/lib/typed/typed.min.js") }}"></script>
-<!-- Contact Form JavaScript File -->
-
-
-
-<!-- Template Main Javascript File -->
-
-<script src="{{ asset("assets/js/main.js") }}"></script>
 
 </body>
 </html>
