--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -42,7 +42,7 @@
                     <a class="nav-link js-scroll active" href="{{ path('home') }}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll" href="Publications">Toutes les publications</a>
+                    <a class="nav-link js-scroll" href="{{ path('post') }}">Toutes les publications</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -61,7 +61,7 @@
                     <a class="nav-link js-scroll active" href="{{ path('home') }}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll" href="Publications">Toutes les publications</a>
+                    <a class="nav-link js-scroll" href="{{ path('post') }}">Toutes les publications</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('app_register') }}">Inscription</a>
