--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,5 +1,11 @@
-
-{% include 'header.html.twig' %}
+<!DOCTYPE html>
+<html lang="en">
+    <meta charset="utf-8">
+    <title>FIND ME ..</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+    {% include 'header.html.twig' %}
 
 <!--/ Intro Skew Star /-->
 <div id="home" class="intro route bg-image" style="background-image: url({{asset("assets/img/intro-bg.jpg")}})">
@@ -9,7 +15,7 @@
             <div class="container">
                 <!--<p class="display-6 color-d">Hello, world!</p>-->
                 <h1 class="intro-title mb-4">FIND ME ... </h1>
-                <p class="intro-subtitle"><span class="text-slider-items">Chercher une personne perdue  ,Aider à retrouver les perdus...,Je sais pas quoi...</span><strong class="text-slider"></strong></p>
+                <p class="intro-subtitle"><span class="text-slider-items">Chercher une personne perdue ,Aider à retrouver les perdus...,Je sais pas quoi...</span><strong class="text-slider"></strong></p>
                 <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
             </div>
         </div>
