--- a/templates/registration/activate.html.twig
+++ b/templates/registration/activate.html.twig
@@ -17,7 +17,8 @@
     <div class="container">
         <h2 style="text-align: center">Your account has been activated !</h2>
         <h3 style="text-align: center">Now you can login with your email adress and your password</h3>
-        <a href="{{ path('app_login') }}"><button class="button button-a button-big button-rouded">Login here</button>
+        <br><br>
+        <a href="{{ path('app_login') }}" style="margin-left: 450px"><button class="button button-a button-big button-rouded">Login here</button>
         </a>
     </div>
 
