--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,20 +26,14 @@
     <link href="{{asset("assets/lib/ionicons/css/ionicons.min.css")}}">
     <link href="{{asset("assets/lib/owlcarousel/assets/owl.carousel.min.css")}}" rel="stylesheet">
     <link href="{{asset("assets/lib/lightbox/css/lightbox.min.css")}}" rel="stylesheet">
-
     <!-- Main Stylesheet File -->
-
     <link href=" {{asset("assets/css/style.css")}}" rel="stylesheet">
-
-
 </head>
-
 <body id="page-top">
-
 <!--/ Nav Star /-->
 <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll" href="#page-top">DevFolio</a>
+        <a class="navbar-brand js-scroll" href="#page-top">FIND ME</a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
                 aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span></span>
