--- a/templates/registration/templateregistration.html.twig
+++ b/templates/registration/templateregistration.html.twig
@@ -1,12 +1,14 @@
-<h1>Welcome  {{ username }} !</h1>
-{#<img src="{{ email.image('@img/favicon.png') }}" alt="Logo">#}
-<p>
+<h2 style="color: #0c5460">Welcome  {{ username|upper }} !</h2>
+<img src="{{ email.image('@images/favicon.png') }}" alt="Logo" width="140px" height="90px">
+<p style="font-size: medium">
     You signed up as the following email:
 </p>
 <p><code>{{ adresse }}</code></p>
-<p>
+<p style="font-size: medium">
     <a href="https://127.0.0.1:8000/registration/account-activation/{{adresse}}">Please click here to activate your account</a>
     (this link is valid until {{ expiration_date|date('F jS') }})
+    <br>
     <br>Cordially<br>
+    <br>
     <span style="font-weight: bold;color: darkslategrey">FINDME TEAM</span>
 </p>
