--- a/templates/publication/newpublication.html.twig
+++ b/templates/publication/newpublication.html.twig
@@ -19,50 +19,13 @@
         }
 
     </style>
-    <title>Hello, world!</title>
 </head>
 
-<body style="background-image: url({{ asset("assets/img/overlay-bg.jpg") }})">
-<div class="card" style="width: 45%; height:40%;  margin-left: auto;margin-top:10%;margin-right: auto;">
-    <div class="card-body" style="border: 3px solid rgb(26, 171, 238);
-        border-radius: .5em;">
-
-{#            <div class="row">#}
-{#                <div class="col" style="width:20px;">#}
-{#                    <input type="text" class="form-control" placeholder="Nom et prénom">#}
-{#                </div>#}
-{#                <div class="col-xs-2" style="width: 80px;">#}
-{#                    <input type="text" class="form-control" placeholder="Age">#}
-{#                </div>#}
-{#            </div>#}
-{#            <div style="height: 20px;">#}
-{#            </div>#}
-{#            <div class="row">#}
-{#                <div class="col ">#}
-{#                    <textarea class="form-control" style="height: 150px;" placeholder="write something here ..."></textarea>#}
-{#                </div>#}
-{#                <div class="col">#}
-{#                    <div class="form-check">#}
-{#                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>#}
-{#                        <label class="form-check-label" for="exampleRadios1">#}
-{#                            Homme#}
-{#                        </label>#}
-{#                    </div>#}
-{#                    <div class="form-check">#}
-{#                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">#}
-{#                        <label class="form-check-label" for="exampleRadios2">#}
-{#                            Femme#}
-{#                        </label>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div style="height: 20px;">#}
-{#            </div>#}
-{#            <div class="row">#}
-{#                <div class="col">#}
-{#                    <input type="text" class="form-control" placeholder="Localisation">#}
-{#                </div>#}
-            <div class="row" >
+<body style="background-color: #E4F3F5">
+<div class="animated fadeIn carte ">
+<div class="card shadow p-3 mb-5 bg-white rounded   carte" style="width: 45%;   margin-left: auto;margin-top:10%;margin-right: auto;">
+    <div class="card-body" style="border: 3px solid rgb(26, 171, 238);border-radius: .5em;">
+            <div class="row">
                 {{ form_start(form,{'attr':{'enctype':'multipart/form-data'}}) }}
             <div class="col"  style="width: 400px;margin-left: 30px">
                {{ form_widget(form1.nom,{'attr':{'placeholder':'Nom et prénom de personne perdue','class':'form-control','style':'widht:150px'}}) }}
@@ -78,15 +41,49 @@
                      </label>
             </div>
                 <br>
-            <div class="col" style="margin-left:25px">
+                <!----------------------------------------------->
+                <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+                <script
+                        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQxxrJ7IjyWm_Y0WDbp-cj-fD3EJ7Z4DA&callback=initMap&libraries=&v=weekly"
+                        defer
+                ></script>
+                <style type="text/css">
+                    /* Always set the map height explicitly to define the size of the div
+                     * element that contains the map. */
+                    #map {
+                        height: 50%;
+                    }
+                    /* Optional: Makes the sample page fill the window. */
+                    #map {
+                        height: 100%;
+                        margin: 0;
+                        padding: 0;
+                    }
+                </style>
+                <script>
+                    function initMap() {
+                        const myLatLng = { lat:37.2720905, lng: 9.8708565 };
+                        const map = new google.maps.Map(document.getElementById("map"), {
+                            zoom: 10,
+                            center: myLatLng,
+                        });
+                        new google.maps.Marker({
+                            position: myLatLng,
+                            map,
+                            title: "Hello World!",
+                        });
+                    }
+                </script>
+               <br>
+
+                <!------------------------------------------------------------------->
+            <div class="col" style="margin-left:10px">
                {{ form_widget(form1.contenu_pub,{'attr':{'placeholder':'Write something here ..','class':'form-control','cols':'30','rows':'4'}}) }}
             </div>
-                <br>
-{#                <div class="col" style="margin-left:25px">#}
-{#                    {{ form_widget(form1.multimedia,{'attr}) }}#}
-{#                </div>#}
+<br>
+                <div id="map" style="margin-left:10px"></div>
             </div>
-                <br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br>
             <div class="col">
                     <div style="margin-left: 80px">
                         <label for="upload" class="btn btn-light m-0 rounded-pill px-4">
@@ -94,47 +91,28 @@
                             <small class="text-uppercase font-weight-bold text-muted">Choisir 4 photos</small>
                             <br>
                             <input type="file" name="files[]"  id="files" multiple="multiple" accept="image/jpg,image/png, image/jpeg" aria-valuemax="" required/>
-{#                            {{ form_start(form)}}#}
-{#                            {{ form_widget(form.source,{'id':"upload",'onchange':"readURL(this);" ,'class':"form-control border-0",'name':"source[]"}) }}#}
                         </label>
-{#                        <div class="progress">#}
-{#                            <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>#}
-{#                        </div>#}
                     </div>
-
-                <!-- Uploaded image area-->-
-{#                <div class="image-area mt-4"><img id="imageResult" src="#" alt="" class="img-fluid rounded shadow-sm mx-auto d-block">#}
-{#                </div>#}
-{#                    <input type="text" class="form-control" placeholder="Add photo">#}
             <div style="height: 20px;">
             </div>
     </div>
+        <br>
         <a href="{{ path('newpost') }}" class="button button-a button-big button-rouded"  style="margin-left: 200px"><button type="submit" style="background-color: transparent;border: navajowhite;color: white">Créer</button> </a>
         {{ form_end(form1) }}
     </div>
     </div>
+
 </div>
 <br>
-<!-- Optional JavaScript; choose one of the two! -->
-<!-- Option 1: jQueryintegrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
-< Option 2: jQuery, Popper.js, and Bootstrap JS
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
--->
+
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
 <script>
     $("#files").on("change", function() {
         if ($("#files")[0].files.length > 4) {
             alert("You can select only 4 images");
             $("#files").val([]);
         }
-        // } else {
-        //     $("#imageUploadForm").submit();
-        // }
     });
     var uploadField = document.getElementById("files");
 
