--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -39,13 +39,13 @@
             {% if app.user %}
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll active" href="{{ path('home') }}">Home</a>
+                    <a class="nav-link js-scroll active" href="{{ path('home') }}">Accueil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('post') }}">Toutes les publications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll" href="#contact">Contact</a>
+                    <a class="nav-link js-scroll" href="{{path('contact')}}">Contact</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('modifiercompte') }}">Compte</a>
@@ -53,12 +53,11 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('app_logout') }}">déconnexion</a>
                 </li>
-
             </ul>
             {% else %}
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll active" href="{{ path('home') }}">Home</a>
+                    <a class="nav-link js-scroll active" href="{{ path('home') }}">Accueil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('post') }}">Toutes les publications</a>
@@ -69,9 +68,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('app_login') }}">connexion</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll" href="#contact">Contact</a>
-                </li>
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link js-scroll" href="#contact">Contact</a>#}
+{#                </li>#}
             </ul>
             {% endif %}
         </div>
