--- a/templates/publication/newpublication.html.twig
+++ b/templates/publication/newpublication.html.twig
@@ -18,9 +18,27 @@
             margin-left: 5px;
         }
 
+        #floating-panel {
+            /*position: absolute;*/
+            /*top: 10px;*/
+            /*left: 25%;*/
+            z-index: 5;
+            background-color: #fff;
+            padding: 5px;
+            border: 1px solid #999;
+            text-align: center;
+            font-family: "Roboto", "sans-serif";
+            line-height: 30px;
+            /*padding-left: 10px;*/
+        }
+        #map {
+            height: 100%;
+        }
+
     </style>
 </head>
-
+<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDch6NmhxtcdIgcCRjZbblh5z16CK-a2Jo&callback=initMap&libraries=&v=weekly" defer></script>
 <body style="background-color: #E4F3F5">
 <div class="animated fadeIn carte ">
 <div class="card shadow p-3 mb-5 bg-white rounded   carte" style="width: 45%;   margin-left: auto;margin-top:10%;margin-right: auto;">
@@ -43,48 +61,117 @@
                 <br>
                 <!----------------------------------------------->
                 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-                <script
-                        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQxxrJ7IjyWm_Y0WDbp-cj-fD3EJ7Z4DA&callback=initMap&libraries=&v=weekly"
-                        defer
-                ></script>
-                <style type="text/css">
-                    /* Always set the map height explicitly to define the size of the div
-                     * element that contains the map. */
-                    #map {
-                        height: 50%;
-                    }
-                    /* Optional: Makes the sample page fill the window. */
-                    #map {
-                        height: 100%;
-                        margin: 0;
-                        padding: 0;
-                    }
-                </style>
-                <script>
-                    function initMap() {
-                        const myLatLng = { lat:37.2720905, lng: 9.8708565 };
-                        const map = new google.maps.Map(document.getElementById("map"), {
-                            zoom: 10,
-                            center: myLatLng,
-                        });
-                        new google.maps.Marker({
-                            position: myLatLng,
-                            map,
-                            title: "Hello World!",
-                        });
-                    }
-                </script>
-               <br>
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
+                <script>
+                    // In the following example, markers appear when the user clicks on the map.
+                    // The markers are stored in an array.
+                    // The user can then click an option to hide, show or delete the markers.
+                    let map;
+                    let markers = [];
+                    var infowindow = new google.maps.InfoWindow();
+                    function initMap() {
+                        const haightAshbury = { lat: 37.2720905, lng: 9.8708565 };
+                        map = new google.maps.Map(document.getElementById("map"), {
+                            zoom: 10,
+                            center: haightAshbury,
+                            draggable: true
+
+                        });
+                        // This event listener will call addMarker() when the map is clicked.
+                        map.addListener("click", (event) => {
+                            addMarker(event.latLng);
+                        });
+                        // Adds a marker at the center of the map.
+                        // addMarker(haightAshbury);
+                    }
+
+
+                    function GetAddress() {
+                        var lat =markers[0].position.lat();
+                        var lng = markers[0].position.lng();
+                        var latlng = new google.maps.LatLng(lat, lng);
+                        var geocoder = new google.maps.Geocoder();
+                        geocoder.geocode({ 'latLng': latlng }, function (results, status) {
+                            if (status === google.maps.GeocoderStatus.OK) {
+                                if (results[1]) {
+                                    alert("Location: " + results[1].formatted_address);
+                                }
+                            }else{
+                                alert("Location: not foound " );
+                            }
+                        });
+                    }
+
+
+                    // Adds a marker to the map and push to the array.
+                    function addMarker(location) {
+                        if(markers.length===1){
+                            alert('Vous devez choisir un seule localisation !\nVous pouvez supprimer la localisation choisie par le bouton Delete Markers !');
+                        }else{
+                            if(markers.length===0){
+                                const marker = new google.maps.Marker({
+                                    position: location,
+                                    map: map,
+                                });
+                                markers.push(marker);
+                            }
+                        }
+                      //  document.getElementById('tableau1').setAttribute("value",markers[0].position.response.data);
+                        console.log(markers[0].title);
+                        document.getElementById('tableau1').setAttribute("value",markers[0].position.lat());
+                        document.getElementById('tableau2').setAttribute("value",markers[0].position.lng());
+                        // console.log(geocoder.reverseGeocodeCoordinate(markers[0].position));
+                        console.log(document.getElementById('tableau1'),document.getElementById('tableau2'));
+                    }
+
+                    // Sets the map on all markers in the array.
+                    function setMapOnAll(map) {
+                        for (let i = 0; i < markers.length; i++) {
+                            markers[i].setMap(map);
+                        }
+                    }
+
+                    // Removes the markers from the map, but keeps them in the array.
+                    function clearMarkers() {
+                        setMapOnAll(null);
+                    }
+
+                    // Shows any markers currently in the array.
+                    function showMarkers() {
+                        setMapOnAll(map);
+                    }
+
+                    // Deletes all markers in the array by removing references to them.
+                    function deleteMarkers() {
+                        clearMarkers();
+                        markers = [];
+                    }
+
+
+                </script>
+
+                <br>
                 <!------------------------------------------------------------------->
             <div class="col" style="margin-left:10px">
-               {{ form_widget(form1.contenu_pub,{'attr':{'placeholder':'Write something here ..','class':'form-control','cols':'30','rows':'4'}}) }}
+               {{ form_widget(form1.contenu_pub,{'attr':{'placeholder':'Ecrire quelque chose ici ..','class':'form-control','cols':'30','rows':'4'}}) }}
             </div>
-<br>
-                <div id="map" style="margin-left:10px"></div>
+            <br>
+                <div id="floating-panel">
+{#                    <input onclick="clearMarkers();" type="button" value="Hide Markers" />#}
+{#                    <input onclick="showMarkers();" type="button" value="Show All Markers" />#}
+                    <input onclick="deleteMarkers();" type="button" value="Delete Markers" />
+                </div>
+                <div id="map">
+
+                </div>
             </div>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <div class="col">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <input type="text"  id="tableau1"  name="markers1" value="">
+        <input type="text"  id="tableau2"  name="markers2" value="">
+        <input type="button" value="Get Address" onclick="GetAddress()" />
+
+        <div class="col">
                     <div style="margin-left: 80px">
                         <label for="upload" class="btn btn-light m-0 rounded-pill px-4">
                             <i class="fa fa-cloud-upload mr-2 text-muted"></i>
@@ -110,7 +197,7 @@
 <script>
     $("#files").on("change", function() {
         if ($("#files")[0].files.length > 4) {
-            alert("You can select only 4 images");
+            alert("Vous pouvez juste selectionner 4 images");
             $("#files").val([]);
         }
     });
@@ -120,7 +207,7 @@
         if(this.files[0].size > 307200){
             alert("File is too big!");
             this.value = "";
-        };
+        }
     };
 </script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
