--- a/templates/publication/repost.html.twig
+++ b/templates/publication/repost.html.twig
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <br>
-            <a href="{{ path('newpost') }}" class="button button-a button-big button-rouded"  style="margin-left: 200px"><button type="submit" style="background-color: transparent;border: navajowhite;color: white">EDIT</button> </a>
+            <a href="{{ path('newpost') }}" class="button button-a button-big button-rouded"  style="margin-left: 200px"><button type="submit" style="background-color: transparent;border: navajowhite;color: white">Repost</button> </a>
             {{ form_end(form1) }}
         </div>
     </div>
