--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -45,6 +45,9 @@
                     <a class="nav-link js-scroll" href="{{ path('post') }}">Toutes les publications</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link js-scroll" href="{{ path('mespublication') }}"> Mes  publications</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link js-scroll" href="#contact">Contact</a>
                 </li>
                 <li class="nav-item">
@@ -62,6 +65,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('post') }}">Toutes les publications</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll" href="{{ path('mespublication') }}"> Mes  publications</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('app_register') }}">Inscription</a>
