--- a/templates/publication/post.html.twig
+++ b/templates/publication/post.html.twig
@@ -161,9 +161,16 @@
           }
       </script>
     <div  class=" container" >
+
     <div class="animated fadeIn carte " style="width: 64rem;" id="divcard">
         {% for pub in pubs %}
+            {% if pub.statut !="R" %}
+
         <div class=" shadow p-3 mb-5 bg-white rounded card   ml-5 col-lg-8 carte"  style="border-radius: 20%">
+
+
+
+
                 <p style="margin-left: 10px;font-size: small;color: lightsteelblue">Publié par {{pub.utilisateur.nom |upper}} {{ pub.utilisateur.prenom}}</p>
                 <p style="margin-left: 505px;font-size: small;color: lightsteelblue;margin-top: -35px;">le {{ pub.datePub |date('d/m/Y H:i') }}</p>
                 <div class="card-body" style="margin-top: -20px">
@@ -174,9 +181,7 @@
                        <span style="font-size: small">{{ pub.contenuPub}}</span>
 
                     </div>
-                    {% if pub.utilisateur.id==app.user.id %}
-                    <a class="nav-link js-scroll" href="{{ path('editpost',{'id':pub.id}) }}">edit</a>
-                    {% endif %}
+
                     <div class="inner">
                         <!--***** GALLERY *****-->
                         {% if pub.mutimedia | length == 4 %}
@@ -315,6 +320,7 @@
                 <a href="{{ path('singlepost',{'id':pub.id}) }}" ><p style="margin-left:520px"><span id="count" class="count">{{ pub.commentaires | length }}</span> commentaires</p></a>
             {% endif %}
         </div>
+            {% endif %}
        {% endfor %}
     </div>
     </div>
@@ -364,10 +370,10 @@
         <div class="pswp__ui pswp__ui--hidden">
             <div class="pswp__top-bar">
                 <div class="pswp__counter"></div>
-                <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
-                <button class="pswp__button pswp__button--share" title="Share"></button>
-                <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
-                <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+                <button class="pswp__button pswp__button--close" title="Close (Esc)">1</button>
+                <button class="pswp__button pswp__button--share" title="Share">2</button>
+                <button class="pswp__button pswp__button--fs" title="Toggle fullscreen">3</button>
+                <button class="pswp__button pswp__button--zoom" title="Zoom in/out">4</button>
                 <div class="pswp__preloader">
                     <div class="pswp__preloader__icn">
                         <div class="pswp__preloader__cut">
